--- a/papers/random-effects/paper.tex
+++ b/papers/random-effects/paper.tex
@@ -60,12 +60,12 @@ The unconditional variance of $y$ is
 For two managers $m$ and $m'$ who worked at the same firm $i$ (manager--manager link at distance 2), the covariance is
 \begin{equation}
 \label{eq:mm2}
- \operatorname{Cov}(y_{im}, y_{im'}) = \sigma_a^2 + 2\rho\sigma_a\sigma_z + \rho^2\sigma_z^2 = (\sigma_a + \rho\sigma_z)^2.
+ \operatorname{Cov}(y_{im}, y_{im'}) = (\sigma_a + \rho\sigma_z)^2.
 \end{equation}
 Similarly, for two firms $i$ and $i'$ run by the same manager $m$ (firm--firm link at distance 2),
 \begin{equation}
 \label{eq:ff2}
- \operatorname{Cov}(y_{im}, y_{i'm}) = \sigma_z^2 + 2\rho\sigma_a\sigma_z + \rho^2\sigma_a^2 = (\sigma_z + \rho\sigma_a)^2.
+ \operatorname{Cov}(y_{im}, y_{i'm}) = (\sigma_z + \rho\sigma_a)^2.
 \end{equation}
 These expressions follow from the law of total covariance and linear conditional expectations.
 
@@ -88,14 +88,14 @@ This simple structure reveals that the ratio of 4-step to 2-step covariances dir
 
 \textit{Proof sketch.} Write $y_{im}=a_i+z_m+\varepsilon_{im}$ and $y_{i'm'}=a_{i'}+z_{m'}+\varepsilon_{i'm'}$. The path $m \leftrightarrow i \leftrightarrow \tilde m \leftrightarrow i' \leftrightarrow m'$ connects these through iterated conditional expectations. Using the linear structure, $\mathbb{E}[a_{i'}\mid a_i] = \rho^2 a_i$ (two steps through $z_{\tilde m}$). Therefore,
 \[
- \operatorname{Cov}(y_{im}, y_{i'm'}) = \rho^2\sigma_a^2 + 2\rho^3\sigma_a\sigma_z + \rho^4\sigma_z^2 = \rho^2 C_{\text{mm},2}.
+ \operatorname{Cov}(y_{im}, y_{i'm'}) = \rho^2(\sigma_a + \rho\sigma_z)^2 = \rho^2 C_{\text{mm},2}.
 \]
 
 \subsection*{Higher-order moments}
 The path attenuation principle extends to arbitrary even path lengths. For 6-step manager-manager pairs connected by path $m_1 \leftrightarrow i_1 \leftrightarrow m_2 \leftrightarrow i_2 \leftrightarrow m_3 \leftrightarrow i_3 \leftrightarrow m_4$, the observed covariance $\operatorname{Cov}(y_{i_1m_1}, y_{i_3m_4})$ decomposes into four latent covariances: $\operatorname{Cov}(a_{i_1}, a_{i_3}) + \operatorname{Cov}(a_{i_1}, z_{m_4}) + \operatorname{Cov}(z_{m_1}, a_{i_3}) + \operatorname{Cov}(z_{m_1}, z_{m_4})$.\footnote{The random-effects model can be formalized as a bipartite Gaussian Markov random field (6), in which conditional independencies follow the network structure and correlations decay exponentially with graph distance. See SI Appendix for the precision matrix formulation.} By path propagation, firm-firm distance 4 gives $\operatorname{Cov}(a_{i_1}, a_{i_3})=\rho^4\sigma_a^2$; manager-manager distance 6 gives $\operatorname{Cov}(z_{m_1}, z_{m_4})=\rho^6\sigma_z^2$; and the cross-type paths (distance 5) each contribute $\rho^5\sigma_a\sigma_z$. Summing yields
 \begin{equation}
 \label{eq:mm6}
- \operatorname{Cov}(y_{i_1m_1}, y_{i_3m_4}) = \rho^4\sigma_a^2 + 2\rho^5\sigma_a\sigma_z + \rho^6\sigma_z^2 = \rho^4(\sigma_a + \rho\sigma_z)^2.
+ \operatorname{Cov}(y_{i_1m_1}, y_{i_3m_4}) = \rho^4(\sigma_a + \rho\sigma_z)^2.
 \end{equation}
 This is exactly $\rho^4$ times the 2-step manager-manager covariance, confirming the general pattern
 \begin{equation}
