--- a/papers/random-effects/paper.tex
+++ b/papers/random-effects/paper.tex
@@ -92,7 +92,7 @@ This simple structure reveals that the ratio of 4-step to 2-step covariances dir
 \]
 
 \subsection*{Higher-order moments}
-The path attenuation principle extends to arbitrary even path lengths. For 6-step manager-manager pairs connected by path $m_1 \leftrightarrow i_1 \leftrightarrow m_2 \leftrightarrow i_2 \leftrightarrow m_3 \leftrightarrow i_3 \leftrightarrow m_4$, the observed covariance $\operatorname{Cov}(y_{i_1m_1}, y_{i_3m_4})$ decomposes into four latent covariances: $\operatorname{Cov}(a_{i_1}, a_{i_3}) + \operatorname{Cov}(a_{i_1}, z_{m_4}) + \operatorname{Cov}(z_{m_1}, a_{i_3}) + \operatorname{Cov}(z_{m_1}, z_{m_4})$.\footnote{The random-effects model can be formalized as a bipartite Gaussian Markov random field (6), in which conditional independencies follow the network structure and correlations decay exponentially with graph distance. See SI Appendix for the precision matrix formulation.} By path propagation, firm-firm distance 4 gives $\operatorname{Cov}(a_{i_1}, a_{i_3})=\rho^4\sigma_a^2$; manager-manager distance 6 gives $\operatorname{Cov}(z_{m_1}, z_{m_4})=\rho^6\sigma_z^2$; and the cross-type paths (distance 5) each contribute $\rho^5\sigma_a\sigma_z$. Summing yields
+The path attenuation principle extends to arbitrary even path lengths.\footnote{The random-effects model can be formalized as a bipartite Gaussian Markov random field (6), in which conditional independencies follow the network structure and correlations decay exponentially with graph distance. The Methods section provides the precision matrix formulation.} For 6-step manager-manager pairs connected by path $m_1 \leftrightarrow i_1 \leftrightarrow m_2 \leftrightarrow i_2 \leftrightarrow m_3 \leftrightarrow i_3 \leftrightarrow m_4$, the observed covariance $\operatorname{Cov}(y_{i_1m_1}, y_{i_3m_4})$ decomposes into four latent covariances: $\operatorname{Cov}(a_{i_1}, a_{i_3}) + \operatorname{Cov}(a_{i_1}, z_{m_4}) + \operatorname{Cov}(z_{m_1}, a_{i_3}) + \operatorname{Cov}(z_{m_1}, z_{m_4})$. By path propagation, firm-firm distance 4 gives $\operatorname{Cov}(a_{i_1}, a_{i_3})=\rho^4\sigma_a^2$; manager-manager distance 6 gives $\operatorname{Cov}(z_{m_1}, z_{m_4})=\rho^6\sigma_z^2$; and the cross-type paths (distance 5) each contribute $\rho^5\sigma_a\sigma_z$. Summing yields
 \begin{equation}
 \label{eq:mm6}
  \operatorname{Cov}(y_{i_1m_1}, y_{i_3m_4}) = \rho^4(\sigma_a + \rho\sigma_z)^2.
@@ -284,24 +284,20 @@ For each three-year window, we implement the following steps:
 % - Large sample size makes degrees of freedom corrections unnecessary
 Hungarian firm-CEO data come from the tax authority and cover 1992--2021. For each firm-year, we observe the registered CEO (person identifier) and annual revenue. We deflate nominal revenue using standard price indices. If a firm--manager relation spans multiple years within a window, we average log revenues.
 
-\subsection*{Data availability}
+\subsection*{Gaussian Markov random field formulation}
 
-The Hungarian tax authority data used in this study are confidential and cannot be made publicly available due to privacy restrictions. Researchers may apply for access through the HUN-REN Centre for Economic and Regional Studies data access process. Code for implementing the estimation procedure will be made available on GitHub upon publication.
+The random-effects decomposition \eqref{eq:model} can be formalized as a bipartite Gaussian Markov random field (6). Let firms $i \in \mathcal{I}$ and managers $j \in \mathcal{J}$ form a bipartite graph with adjacency matrix $G_{ij} \in \{0,1\}$ indicating observed matches. The latent effects $(a,z)$ follow a multivariate normal distribution $(a,z) \sim \mathcal{N}(0, Q^{-1})$, where the precision matrix $Q$ has block structure with diagonal blocks $D_A = \sigma_a^{-2} I_{|\mathcal{I}|}$ and $D_Z = \sigma_z^{-2} I_{|\mathcal{J}|}$, and off-diagonal blocks $-\rho W$ and $-\rho W^\top$, where $W$ shares the sparsity pattern of $G$ (i.e., $W_{ij}\neq 0$ iff $G_{ij}=1$).
 
-% TODO: Create SI Appendix with full GMRF formulation (Rue & Held 2005, ref 6)
-% SI should include:
-% 1. Precision matrix formulation: Q with blocks D_A = σ_a^{-2} I, D_Z = σ_z^{-2} I, off-diagonal -ρW
-%    where W shares sparsity pattern of adjacency matrix G
-% 2. Conditional independence structure: a_i ⊥ (a_{-i}, z_{J\N(i)}) | z_{N(i)}
-% 3. Marginal variance expressions: Var(a_i)=σ_a^2, Var(z_j)=σ_z^2, Cov(a_i,z_j)=ρσ_aσ_z
-% 4. Proof that dependence propagates along edges and decays exponentially with path length
-% 5. Discussion of how additive noise ε_{ij} makes observed field non-Markovian
-% 6. Derivations for 8-step, 10-step moments as additional overidentification tests
-% 7. Connection to spatial statistics and network autoregression literature
+This structure implies conditional independencies that follow the network: firm effect $a_i$ is conditionally independent of other firm effects and unconnected manager effects given its connected managers, $a_i \perp (a_{-i}, z_{\mathcal{J}\setminus N(i)}) \mid z_{N(i)}$, where $N(i)$ denotes the neighborhood of firm $i$. Symmetrically for manager effects, $z_j \perp (z_{-j}, a_{\mathcal{I}\setminus N(j)}) \mid a_{N(j)}$. The marginal distributions satisfy $\operatorname{Var}(a_i)=\sigma_a^2$, $\operatorname{Var}(z_j)=\sigma_z^2$, and $\operatorname{Cov}(a_i,z_j)=\rho\sigma_a\sigma_z$ for connected pairs.
+
+The GMRF structure ensures that correlations decay exponentially with graph distance: the covariance between two firms (or managers) separated by $k$ edges in the bipartite graph is proportional to $\rho^k$. This exponential decay is the foundation of the path attenuation principle used for identification. The additive match-specific noise $\varepsilon_{ij}$, which is independent across matches and orthogonal to $(a,z)$, makes the observed outcome field non-Markovian while preserving the latent GMRF structure.
 
 % TODO: Implement estimation with 6-step and 8-step moments for robustness
 % Use general pattern C_h = ρ^{h-2} C_2 to test model fit
-% If overidentification tests reject, consider extensions (heterogeneous ρ, non-Gaussian noise)
+
+\subsection*{Data availability}
+
+The Hungarian tax authority data used in this study are confidential and cannot be made publicly available due to privacy restrictions. Researchers may apply for access through the HUN-REN Centre for Economic and Regional Studies data access process. Code for implementing the estimation procedure will be made available on GitHub upon publication.
 
 }
 
