Correct PNAS reference count comment - no hard limit at 12
PNAS standard is ~50 references for a 6-page article, not 12. Current count of 9 is well within reasonable bounds.

--- a/papers/random-effects/paper.tex
+++ b/papers/random-effects/paper.tex
@@ -232,7 +232,7 @@ The strong positive sorting ($\rho \approx 0.89$--0.96) combined with firm heter
 
 Second, the dominance of firm heterogeneity suggests firm-specific characteristics---technology, capital, market position---account for most revenue variation. CEO quality matters primarily through interaction with firm type rather than independently. This complements event study evidence showing modest causal effects of CEO transitions on the same Hungarian data (7).
 
-% NOTE: Current count: 9 references (under 12 PNAS limit)
+% NOTE: Current count: 9 references (PNAS standard is ~50 for 6-page article)
 % Cited: AKM, Andrews, Choo-Siow, Clark, Graham, Rue-Held, Koren-Orban-Telegdy, Bonhomme-Manresa, Bonhomme-Lamadon-Manresa
 Third, our estimates of very strong positive sorting ($\rho \approx 0.89$--0.96) contrast sharply with worker-firm matching literature, where correlations are typically weak or negative (1). Andrews et al.\ (2) find negative assortative matching in German data after correcting for limited mobility bias, with correlations around $-0.1$ to $-0.2$. The difference likely reflects fundamental distinctions between CEO and worker labor markets: CEOs are scarce, high-skill workers whose productivity exhibits strong complementarity with firm capital; the CEO matching process involves intensive search with substantial information revelation; and CEOs capture a large share of match surplus through compensation negotiations, incentivizing efficient sorting. Our correlation estimates also align with the strong positive CEO-firm relationship documented using event study methods (7), though our approach avoids the bias inherent in fixed-effects estimators.
 
