Update paper title to emphasize tractability and main finding
New title: 'A Tractable Random Effects Model Reveals Strong Positive Sorting in CEO Labor Markets'

Benefits:
- Highlights methodological contribution (tractable random effects approach)
- Emphasizes key empirical finding (strong positive sorting)
- More accessible to broad PNAS audience
- Clearer than previous title about what the paper delivers

Resolves #1

--- a/papers/random-effects/paper.tex
+++ b/papers/random-effects/paper.tex
@@ -2,7 +2,7 @@
 
 \templatetype{pnasresearcharticle}
 
-\title{Identifying Sorting from Mobility Networks: Theory and Evidence from Hungarian CEO--Firm Matches}
+\title{A Tractable Random Effects Model Reveals Strong Positive Sorting in CEO Labor Markets}
 
 \author[a,1]{Miklós Koren}
 \author[b]{Krisztina Orbán}
