Add Glaeser, Sacerdote & Scheinkman (2003) citation for variance decomposition methodology
- Cite GSS (2003) 'The Social Multiplier' in Identification section
- Note methodological parallel: both use variance decomposition across network structure
- GSS: within-group vs across-group variance identifies social interactions
- Our paper: 2-step vs 4-step covariances identify sorting parameter
- Clear but understated connection - same identification logic, different application
- Citation count now 10

--- a/papers/random-effects/paper.tex
+++ b/papers/random-effects/paper.tex
@@ -109,7 +109,7 @@ for $h$-step paths with $h$ even. These higher-order moments provide additional 
 
 \section*{Identification and Estimation}
 
-Equations \eqref{eq:var}--\eqref{eq:ff4} provide five moment conditions for four parameters, yielding an overidentified system. The ratio structure \eqref{eq:rho-ratio} permits constructive estimation.
+Equations \eqref{eq:var}--\eqref{eq:ff4} provide five moment conditions for four parameters, yielding an overidentified system. The ratio structure \eqref{eq:rho-ratio} permits constructive estimation. Our approach shares the logic of variance decomposition methods that exploit correlation structure across network connections to identify parameters (10), but applies it to path-length decay in mobility networks rather than within-group versus across-group comparisons.
 
 \subsection*{Path attenuation interpretation}
 Figure~\ref{fig:network} illustrates the identification strategy using a bipartite network. The ratio measures how correlation decays with network distance. A 4-step path requires two additional "hops" through the matching process compared to a 2-step connection. Each hop introduces one factor of $\rho$, giving $\rho^2$ attenuation. Taking ratios cancels all variance and cross-product terms, isolating $\rho^2$.
@@ -403,6 +403,11 @@ Grouped Patterns of Heterogeneity in Panel Data.
 S. Bonhomme, T. Lamadon, E. Manresa, 
 A Distributional Framework for Matched Employer Employee Data. 
 \textit{Econometrica} \textbf{87}, 699--739 (2019).
+
+\bibitem{GlaeserSacerdoteScheinkman2003}
+E. L. Glaeser, B. I. Sacerdote, J. A. Scheinkman, 
+The Social Multiplier. 
+\textit{J. Eur. Econ. Assoc.} \textbf{1}, 345--353 (2003).
 
 \end{thebibliography}
 
